fixed margin issues on mobile

--- a/src/components/Main.module.css
+++ b/src/components/Main.module.css
@@ -121,6 +121,6 @@ main h2 {
   }
   .mobile {
     display: flex;
-    margin-right: 40px;
+    margin-right: 2px;
   }
 }
